#335: Added objects and mutations required for searching employees